--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-    "name": "insiteapps/common-ecommerce",
+    "name": "insiteapps/silvercloud-shop",
     "description": "Silverstripe Insite Apps (south africa) commonly used ecommerce project files",
     "type": "silverstripe-module",
     "keywords": [
-        "insite"
+        "insite,silvercloud-shop,silvershop"
     ],
     "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Itayi Patrick Chitovoro",
-            "email": "patrick@chitosystems.com"
+            "email": "patrick@insiteapps.co.za"
         }
     ],
     "require": {
-        "silverstripe/multiform": "*",
-        "symbiote/silverstripe-memberprofiles": "*",
+        "silverstripe/multiform": "dev-master",
+        "symbiote/silverstripe-memberprofiles": "dev-master",
 
         "burnbright/silverstripe-hasonefield": "*",
         "silvershop/core": "dev-master",
