--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "omnipay/dummy": "dev-master",
         "markguinn/silverstripe-ajax": "dev-master",
         "markguinn/silverstripe-shop-extendedpricing": "dev-master",
-        "markguinn/silverstripe-shop-search": "dev-master",
+        "markguinn/silverstripe-shop-search": "dev-master"
 
     },
     "extra": {
