batch code update - silvercloud-shop

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Silverstripe Insite Apps (south africa) commonly used ecommerce project files",
     "type": "silverstripe-module",
     "keywords": [
-        "insite,silvercloud-shop,silvershop"
+        "insite","silvercloud-shop","silvershop"
     ],
     "license": "BSD-3-Clause",
     "authors": [
@@ -15,26 +15,19 @@
     "require": {
         "silverstripe/multiform": "dev-master",
         "symbiote/silverstripe-memberprofiles": "dev-master",
-
         "burnbright/silverstripe-hasonefield": "*",
         "silvershop/core": "dev-master",
-
         "silverstripe/silverstripe-omnipay": "dev-master",
-
         "silvershop/discounts": "dev-master",
         "silvershop/stock": "dev-master",
         "silvershop/shipping": "dev-master",
-
         "markguinn/silverstripe-shop-downloadable": "*",
-
-
         "omnipay/paypal": "dev-master",
         "omnipay/manual": "dev-master",
         "omnipay/dummy": "dev-master",
         "markguinn/silverstripe-ajax": "dev-master",
         "markguinn/silverstripe-shop-extendedpricing": "dev-master",
         "markguinn/silverstripe-shop-search": "dev-master"
-
     },
     "extra": {
         "installer-name": "silvercloud-shop"
