--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,7 @@
     ],
     "require": {
         "silvershop/core": "^3@dev",
-        "omnipay/paypal": "dev-master",
-        "omnipay/manual": "dev-master",
-        "omnipay/dummy": "dev-master" 
+        "silverstripe/silverstripe-omnipay": "^3@dev"
     },
     "extra": {
         "installer-name": "silvercloud-shop"
